deploy/kubernetes/istio/client-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client
  namespace: fushigi
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        exact: "/"
    - uri:
        exact: "/play"
    - uri:
        prefix: "/static"
    route:
    - destination:
        host: client
