deploy/kubernetes/istio/scheduler-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: scheduler
  namespace: fushigi
spec:
  hosts:
  - scheduler
  http:
  - route:
    - destination:
        host: scheduler
